# datalakeUpload

./: .dockerignore  .env.example  .gitignore  README.md  catalog.json  consideraciones_prefect_flows.md  consultas.sql  especificacion_carga_datos_TFM.md  esquema_estrella_final_powerbi.md  estructura_dbt_proyecto.md  fuentes_registradas_y_api.md  generate_data_dictionary.py  main.py  manifest.json  mlflow.db  plan.md  pyproject.toml  requirements.txt  scrapping.py  tinsa_malaga.csv  tinsa_malaga_andalucia.csv  tinsa_malaga_ciudad.csv
configs/: config.yaml
dataset/: 2882.csv  31106.csv  37706.csv  69301.csv  69303.csv  69307.csv  seed_geografia_tinsa.csv  seed_indicadores_fuentes.csv  tinsa_malaga_andalucia.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/analyses/: validacion_hombres_mujeres_total.sql
dbt/reference_migration/: README.md  seed_dim_geografia.csv  seed_geografia_tinsa.csv
dbt/tests/: assert_hombres_mujeres_igual_total.sql
docs/: diccionario_datos.md
flows/: 01_hello_prefect.py  02_data_validation.py  03_dbt_run.py  04_staging_manual.py  champion_promotion.py  dataset_management.py  deploy.py  retraining_trigger.py  training_pipeline.py
infra/: .env.example  Dockerfile.api  Dockerfile.dbt  Dockerfile.worker  docker-compose.dbt.yml  docker-compose.prefect.yml  docker-compose.yml  init-minio.sh
notebooks/: 01_eda.ipynb  02_mlflow_intro.ipynb  03_prefect_intro.ipynb
scripts/: generate_data_dictionary.py  load_tfm_dataset.py  load_tinsa_demo.py
src/: a.py  config.py  data_prep.py  evaluate.py  predict.py  register.py  train.py
(+48 files in other folders)
