[project]
name = "modulo-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.96",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "mlflow==3.11.1",
    "numba>=0.60",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "prefect==3.6.12",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.46",
    "xgboost>=3.2.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.6",

    # Base de datos (SYNC)
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",

    # Config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.3.4",
]

